src/ui/control/EmojiSelector.css
.emoji-selector {
    font-size: 2rem;
    display: flex;
    flex-wrap: wrap;
}

.emoji-selector:focus {
    outline: none;
}

.emoji-selector .choice {
    flex: none;
    position: relative;
    width: 3rem;
    height: 3.3rem;
    text-align: center;
    padding-bottom: 0.3rem;
}

.emoji-selector .choice:hover {
    background-color: var(--highlight);
    border-radius: 5px;
}

.emoji-selector .choice .dimmer {
    position: absolute;
    z-index: 100;
    left: 0;
    top: 0;
    width: 3rem;
    height: 3.3rem;
    background-color: rgba(255, 255, 255, 0.8);
}

.emoji-selector .choice:hover .dimmer {
    background-color: rgba(255, 255, 255, 0.4);
}

.emoji-selector .choice .marker {
    position: absolute;
    z-index: 99;
    right: 0;
    top: 0;
    font-size: 0.8rem;
    color: var(--primary);
}

